--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "costflow",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Costflow Parser",
   "main": "lib/index.js",
   "browser": "dist/index.min.js",
@@ -12,6 +12,7 @@
     "package": "webpack --mode development",
     "package:analyze": "cross-env ANALYZE=true webpack --mode production",
     "package:prod": "webpack --mode production",
+    "release": "npm run build && npm run package:prod && npm publish",
     "test": "npm run build && jest",
     "test:coverage": "npm run build && jest --coverage",
     "watch": "tsc -b --watch"
